29. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
	- dont add empty exclude rule on rule list at selreadable dialog
	- make read blocksize configurable by define

26. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
	- icons for encryption related buttons added
	- compare on TestInStream constructor fixed
	- missing initalization of vars (bTAGreaded, bTAGexist, tnumber) at ReadMp3Tag class on constructor added
	- reading old catalog without sortedBy attribute fails fixed
	- use qstring instead char * for what and err string at getStr2, getDouble2

25. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
	- window title on borrow dialog fixed
	- use initalization list for init local vars instead inside constructor on mediainfo dialog
	- resource leak on insertDB at out of memory error fixed
	- use initalization list for init local vars instead inside constructor on colorsettings dialog
	- typo on commwidget contructor on init a var fixed
	- missing initalization of etype var on constructors added
	- code cleanup at getFullPath() on Node class
	- missing initalization of information var at lineobject class on constructor added
	- assignment of fileinfo var on DBFile constructor fixed
	- missing initalization of vars (length, last, alternate) at MString class on constructor added
	- not nessary var errormsg removed
	- missing initalization of vars (usefileinfo, useExternalContentViewer, storeExifData, commentDockPos_x, commentDockPos_y, commentWindowPos_x, commentWindowPos_y, commentDockSize_width, commentDockSize_height, contentWindowPos_x, contentWindowPos_y, contentWindowSize_width, contentWindowSize_height commentWindowSize_width, commentWindowSize_height) at CdcatConfig class on constructor added
	- missing initalization of vars (founded, pww, error, errptr, dirname, filename, comment, find_category, tartist, ttitle, talbum, tcomment, content, allmedia,